k8s/apps/chartmuseum/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chartmuseum
  labels:
    goldilocks.fairwinds.com/enabled: "true"
