k8s/apps/chartmuseum/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chartmusuem
spec:
  parentRefs:
    - name: shared
      namespace: default
  hostnames:
    - charts.juliamertz.dev
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
            statusCode: 302
      matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /info
    - backendRefs:
        - name: chartmuseum
          port: 8080
      matches:
        - method: GET
        - method: HEAD
